# MemMapExplorer

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: argsmanager.cpp.BA8EC65A625AA741.idx  argsmanager.hpp.B8A81B987565EEA9.idx  guimanager.cpp.AB165B89BB924EDE.idx  guimanager.hpp.E270739F3FDA50F5.idx  main.cpp.F738A43E4838767A.idx  pidutils.hpp.C5D26FCC21D858B6.idx  processmanager.cpp.DE2A9A087B604676.idx  processmanager.hpp.A03408CADD14AD9F.idx
include/: Globals.hpp  GuiManager.h  ProcessManager.h  ProcessManager.hpp  argsmanager.hpp  globals.h  guimanager.hpp  pidutils.hpp  processmanager.hpp
include/gdumper/: argsmanager.hpp  gui.hpp  guimanager.hpp  managergui.hpp  memgui.hpp  pidutils.hpp  processmanager.hpp  stringgui.hpp
include/gdumper/gui/: gui.hpp  managergui.hpp  memgui.hpp  stringgui.hpp
src/: argsmanager.cpp  guimanager.cpp  main.cpp  pidutils.cpp  processmanager.cpp
src/gui/: gui.cpp  managergui.cpp  memgui.cpp  stringgui.cpp
src/manager/: GuiManager.cpp  ProcessManager.cpp
test/: argsmanagertest.cpp  pidutilstest.cpp  processmanagertest.cpp
